<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="vibrate_on_keypress">Vibrate on keypress</string>
    <string name="sound_on_keypress">Sound on keypress</string>
    <string name="hit_correction">Correct typing errors</string>
    <string name="hit_correction_summary">Enable input error correction</string>
    <string name="hit_correction_land">Landscape input errors</string>
    <string name="hit_correction_land_summary">Enable input error correction</string>
    <string name="auto_correction">Word suggestions</string>
    <string name="auto_correction_summary">Automatically correct the previous word</string>
    <string name="prediction">Word suggestions</string>
    <string name="prediction_category">Word suggestion settings</string>
    <string name="prediction_summary">Enable auto completion while typing</string>
    <string name="auto_complete_dialog_title">Auto completion</string>
    <string name="prediction_landscape">Increase text field size</string>
    <string name="prediction_landscape_summary">Hide word suggestions in landscape view</string>
    <string name="auto_cap">Auto-capitalization</string>
    <string name="auto_cap_summary">Capitalize the start of a sentence</string>
    <string name="auto_punctuate">Auto-punctuate</string>
    <string name="quick_fixes">Quick fixes</string>
    <string name="quick_fixes_summary">Corrects commonly typed mistakes</string>
    <string name="show_suggestions">Show suggestions</string>
    <string name="show_suggestions_summary">Display suggested words while typing</string>
    <string name="auto_complete">Auto-complete</string>
    <string name="auto_complete_summary">Spacebar and punctuation automatically insert highlighted word</string>
    <string-array name="prediction_modes">
        <item>None</item>
        <item>Basic</item>
        <item>Advanced</item>
    </string-array>
    <string name="prediction_none">0</string>
    <string name="prediction_basic">1</string>
    <string name="prediction_full">2</string>
    <string-array name="prediction_modes_values">
        <item>@string/prediction_none</item>
        <item>@string/prediction_basic</item>
        <item>@string/prediction_full</item>
    </string-array>
    <string name="added_word"><xliff:g id="word">%s</xliff:g> : Saved</string>
    <string name="alternates_for_a">àáâãäåæ</string>
    <string name="alternates_for_e">èéêë</string>
    <string name="alternates_for_i">ìíîï</string>
    <string name="alternates_for_o">òóôõöœø</string>
    <string name="alternates_for_u">ùúûü</string>
    <string name="alternates_for_s">§ß</string>
    <string name="alternates_for_n">ñ</string>
    <string name="alternates_for_c">ç</string>
    <string name="alternates_for_y">ýÿ</string>
    <string name="key_i">i</string>
    <string name="tip_long_press">Hold a key down to see accents (ø, ö, etc.)</string>
    <string name="tip_dismiss">Press the back key \u21B6 to close the keyboard at any point</string>
    <string name="tip_access_symbols">Access numbers and symbols</string>
    <string name="tip_add_to_dictionary">Press and hold the left-most word to add it to the dictionary</string>
    <string name="touch_to_continue">Touch this hint to continue »</string>
    <string name="touch_to_finish">Touch here to close this hint and start typing!</string>
    <string name="tip_to_open_keyboard"><b>The keyboard opens any time you touch a text field</b></string>
    <string name="tip_to_view_accents"><b>Touch &amp; hold a key to view accents\n(ø, ö, ô, ó, and so on)</b></string>
    <string name="tip_to_open_symbols"><b>Switch to numbers and symbols by touching this key</b></string>
    <string name="tip_to_close_symbols"><b>Go back to letters by touching this key again</b></string>
    <string name="tip_to_launch_settings"><b>Touch &amp; hold this key to change keyboard settings, like auto complete</b></string>
    <string name="tip_to_start_typing"><b>Try it!</b></string>
    <string name="label_go_key">Go</string>
    <string name="label_next_key">Next</string>
    <string name="label_done_key">Done</string>
    <string name="label_send_key">Send</string>
    <string name="label_symbol_key">\?123</string>
    <string name="label_phone_key">123</string>
    <string name="label_alpha_key">ABC</string>
    <string name="label_alt_key">ALT</string>
    <string name="open_the_keyboard"><font size="17"><b>Open the keyboard\n</b></font><font size="3">\n</font>Touch any text field.</string>
    <string name="close_the_keyboard"><font size="17"><b>Close the keyboard\n</b></font><font size="3">\n</font>Press the Back key.</string>
    <string name="touch_and_hold"><font size="17"><b>Touch \u0026 hold a key for options\n</b></font><font size="3">\n</font>Access punctuation and accents.</string>
    <string name="keyboard_settings"><font size="17"><b>Keyboard settings\n</b></font><font size="3">\n</font>Touch \u0026 hold the <b>\?123\</b> key.</string>
    <string name="popular_domain_0">".com"</string>
    <string name="popular_domain_1">".net"</string>
    <string name="popular_domain_2">".org"</string>
    <string name="popular_domain_3">".gov"</string>
    <string name="popular_domain_4">".edu"</string>
    <string name="english_ime_name">Tecla Access</string>
    <string name="english_ime_settings">Tecla Access settings</string>
    <string name="inputMethod">Input method</string>
    <string name="pref_voice_input">Enable voice input</string>
    <string name="pref_voice_input_summary">Adds a key for quick access to voice commands and speech recognition</string>
    <string name="pref_variants_key">Show accents key</string>
    <string name="pref_variants_key_summary">Adds a sticky key that enables accented characters and other variants</string>
    <string name="alternative_input_category">Alternative input settings</string>
    <string name="shield_connect">Connect to Tecla Shield</string>
    <string name="shield_connect_summary_BT_nosupport">Bluetooth is not supported</string>
    <string name="fullscreen_switch">Fullscreen switch mode</string>
    <string name="fullscreen_switch_summary">Uses the entire screen as a single switch</string>
    <string name="persistent_keyboard">Show navigation keyboard</string>
    <string name="persistent_keyboard_summary">Shows a small navigation keyboard when not entering text</string>
    <string name="autohide_timeout">Navigation keyboard timeout</string>
    <string name="autohide_timeout_summary">Adjust the delay before the navigation keyboard automatically hides</string>
    <string name="fullreset_timeout">Long press reset delay</string>
    <string name="fullreset_timeout_summary">Adjust the long press delay before returning to Home</string>
    <string name="dialog_confirm_reset">Are you sure you want to reset to default actions?</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="dialog_faster">Faster</string>
    <string name="dialog_slower">Slower</string>
    <string name="btn_done">Done</string>
    <string name="scanning_category">Scanning settings</string>
    <string name="self_scanning">Enable self-scanning</string>
    <string name="self_scanning_summary">Scans the keyboard automatically</string>
    <string name="inverse_scanning">Enable inverse scanning</string>
    <string name="inverse_scanning_summary">Scan on switch press and select on release</string>
    <string name="scan_speed">Scanning speed</string>
    <string name="scan_speed_summary">Adjust the scanning speed</string>
    <string name="define_switch_action">Configure switch actions</string>
    <string name="define_switch_action_summary">Customize the actions assigned to each switch input</string>
    <string name="switch_j1">ECU 1 / Forward</string>
    <string name="switch_j2">ECU 2 / Reverse</string>
    <string name="switch_j3">ECU 3 / Left</string>
    <string name="switch_j4">ECU 4 / Right</string>
    <string name="switch_e1">Switch 1</string>
    <string name="switch_e2">Switch 2</string>
    <string name="switch_j1_tecla">ECU 1 / Forward Tecla action</string>
    <string name="switch_j2_tecla">ECU 2 / Reverse Tecla action</string>
    <string name="switch_j3_tecla">ECU 3 / Left Tecla action</string>
    <string name="switch_j4_tecla">ECU 4 / Right Tecla action</string>
    <string name="switch_e1_tecla">Switch 1 Tecla action</string>
    <string name="switch_e2_tecla">Switch 2 Tecla action</string>
    <string name="switch_default">Restore default actions</string>
    <string name="switch_default_summary">Reset switch actions to default values</string>
    <string name="user_data_category">Reset Switch Actions</string>
    <string name="contributor_title_text1">Jorge Silva</string>
    <string name="contributor_title_text2">Maurici Mesa</string>
    <string name="contributor_title_text3">Kelvin Mak</string>
    <string name="contributor_title_text4">Darcy Mcgray</string>
    <string name="contributor_title_text5">John Smith</string>
    <string name="contributor_label_text1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacus orci, faucibus vitae aliquam eget, gravida at lectus. Mauris sed arcu vel purus dictum vulputate nec non nunc. Suspendisse dapibus libero sit amet odio ultrices dapibus adipiscing purus semper. Etiam at lacus eget elit vulputate mattis. Proin nec tellus nec turpis lobortis ultricies. Vivamus ultricies risus non ipsum fringilla sit amet facilisis tellus tempus. Aliquam erat volutpat. Vestibulum ac enim neque, at vulputate metus. Cras suscipit tellus non orci vehicula et tristique metus iaculis. Pellentesque et lorem libero, ut tincidunt orci. Duis condimentum massa at tortor hendrerit dignissim. Vestibulum ut risus et massa laoreet tristique.</string>
    <string name="contributor_label_text2">Proin eros dolor, pellentesque nec vehicula et, consequat vitae est. Sed et tincidunt mauris. Proin vel elit tempus enim feugiat ultricies sed non turpis. Morbi egestas ullamcorper leo, quis bibendum leo auctor sit amet. Maecenas sem nunc, interdum interdum ornare et, interdum a leo. Sed feugiat, justo nec congue sodales, leo velit gravida nulla, sit amet suscipit quam nisl ut justo. Nunc tincidunt tortor sit amet enim bibendum rutrum. Etiam fringilla leo bibendum felis laoreet facilisis.</string>
    <string name="contributor_label_text3">Donec congue tincidunt ornare. Duis a lectus sit amet orci ornare ornare. Duis varius libero eget velit molestie consequat. Nulla facilisi. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vivamus pellentesque sollicitudin urna ac volutpat. Nullam malesuada nisl ut dui ullamcorper rhoncus. Phasellus blandit accumsan nisi at viverra.</string>
    <string name="contributor_label_text4">Phasellus a nunc orci, non eleifend tellus. Etiam et nunc tortor. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Suspendisse leo ipsum, auctor vel hendrerit id, blandit ac est. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Donec pulvinar euismod lorem, non condimentum dui feugiat et. Nulla laoreet neque a metus tincidunt pretium. Quisque venenatis quam sit amet dui congue accumsan. Aliquam erat volutpat. Sed eget lorem et est viverra commodo. Sed ut ultrices felis. Nam posuere egestas nunc sed viverra. Sed at quam et ligula vehicula tincidunt nec at justo. Morbi id ipsum quis risus imperdiet imperdiet. Nulla consequat tempor magna, sit amet imperdiet risus adipiscing nec.</string>
    <string name="contributor_label_text5">Nullam sed urna sed turpis gravida pretium quis nec risus. Mauris eget feugiat orci. Curabitur non risus tortor, ornare feugiat diam. Donec non sem urna, id facilisis ante. Quisque ullamcorper bibendum auctor. Mauris quis luctus nisi. In hac habitasse platea dictumst. Nam velit eros, malesuada at pharetra sed, mattis eu nunc.</string>
</resources>