<?xml version="1.0" encoding="utf-8"?>
<!--
     Copyright (C) 2008 The Android Open Source Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at
  
          http://www.apache.org/licenses/LICENSE-2.0
  
     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:key="english_ime_settings"
    android:title="@string/english_ime_settings" >

    <CheckBoxPreference
        android:key="vibrate_on"
        android:persistent="true"
        android:title="@string/vibrate_on_keypress" />

    <CheckBoxPreference
        android:key="sound_on"
        android:persistent="true"
        android:title="@string/sound_on_keypress" />

    <CheckBoxPreference
        android:defaultValue="true"
        android:key="auto_cap"
        android:persistent="true"
        android:title="@string/auto_cap" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="variants_key"
        android:persistent="true"
        android:summary="@string/pref_variants_key_summary"
        android:title="@string/pref_variants_key" />

    <CheckBoxPreference
        android:defaultValue="false"
        android:key="voice_input"
        android:persistent="true"
        android:summary="@string/pref_voice_input_summary"
        android:title="@string/pref_voice_input" />

    <!--
         <CheckBoxPreference
        android:defaultValue="false"
        android:key="speakerphone_switch"
        android:persistent="true"
        android:summary="@string/speakerphone_switch_summary"
        android:title="@string/speakerphone_switch" />
    -->

    <PreferenceCategory
        android:key="alternative_input_settings"
        android:title="@string/alternative_input_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="shield_connect"
            android:persistent="true"
            android:title="@string/shield_connect" />

        <PreferenceScreen
            android:key="configure_input"
            android:summary="@string/define_switch_action_summary"
            android:title="@string/define_switch_action" >

            <PreferenceScreen
                android:key="switch_e1"
                android:title="@string/switch_e1" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="4"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_e1_tecla"
                    android:persistent="true"
                    android:title="@string/switch_e1_tecla" />

                <!--
                     <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="0"
                    android:entries="@array/morseArray"
                    android:entryValues="@array/morseValues"
                    android:key="switch_e1_morse"
                    android:persistent="true"
                    android:title="@string/switch_e1_morse" />
                -->
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_e2"
                android:title="@string/switch_e2" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="3"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_e2_tecla"
                    android:persistent="true"
                    android:title="@string/switch_e2_tecla" />

                <!--
                     <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="0"
                    android:entries="@array/morseArray"
                    android:entryValues="@array/morseValues"
                    android:key="switch_e2_morse"
                    android:persistent="true"
                    android:title="@string/switch_e2_morse" />
                -->
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j1"
                android:title="@string/switch_j1" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="1"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j1_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j1_tecla" />

                <!--
                     <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="1"
                    android:entries="@array/morseArray"
                    android:entryValues="@array/morseValues"
                    android:key="switch_j1_morse"
                    android:persistent="true"
                    android:title="@string/switch_j1_morse" />
                -->
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j2"
                android:title="@string/switch_j2" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="2"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j2_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j2_tecla" />

                <!--
                     <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="2"
                    android:entries="@array/morseArray"
                    android:entryValues="@array/morseValues"
                    android:key="switch_j2_morse"
                    android:persistent="true"
                    android:title="@string/switch_j2_morse" />
                -->
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j3"
                android:title="@string/switch_j3" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="3"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j3_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j3_tecla" />

                <!--
                     <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="3"
                    android:entries="@array/morseArray"
                    android:entryValues="@array/morseValues"
                    android:key="switch_j3_morse"
                    android:persistent="true"
                    android:title="@string/switch_j3_morse" />
                -->
            </PreferenceScreen>

            <PreferenceScreen
                android:key="switch_j4"
                android:title="@string/switch_j4" >

                <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="4"
                    android:entries="@array/switch_actions"
                    android:entryValues="@array/switch_action_values"
                    android:key="switch_j4_tecla"
                    android:persistent="true"
                    android:title="@string/switch_j4_tecla" />

                <!--
                     <ca.idi.tecla.lib.ListPreference
                    android:defaultValue="4"
                    android:entries="@array/morseArray"
                    android:entryValues="@array/morseValues"
                    android:key="switch_j4_morse"
                    android:persistent="true"
                    android:title="@string/switch_j4_morse" />
                -->
            </PreferenceScreen>

            <Preference
                android:key="full_reset_timeout"
                android:persistent="true"
                android:summary="@string/fullreset_timeout_summary"
                android:title="@string/fullreset_timeout" />

            <PreferenceCategory
                android:key="reset_default_settings"
                android:title="@string/user_data_category" >

                <Preference
                    android:key="switch_default"
                    android:persistent="true"
                    android:summary="@string/switch_default_summary"
                    android:title="@string/switch_default" />
            </PreferenceCategory>
        </PreferenceScreen>

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="fullscreen_switch"
            android:persistent="true"
            android:summary="@string/fullscreen_switch_summary"
            android:title="@string/fullscreen_switch" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="persistent_keyboard"
            android:persistent="true"
            android:summary="@string/persistent_keyboard_summary"
            android:title="@string/persistent_keyboard" />

        <Preference
            android:key="autohide_timeout"
            android:persistent="true"
            android:summary="@string/autohide_timeout_summary"
            android:title="@string/autohide_timeout" />
    </PreferenceCategory>

    <!--
    <PreferenceCategory
        android:key="morse_input_settings"
        android:title="@string/morse_input_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="morse_mode"
            android:persistent="true"
            android:summary="@string/morse_mode_summary"
            android:title="@string/morse_mode" />

        <ca.idi.tecla.lib.ListPreference
            android:defaultValue="0"
            android:entries="@array/morse_switch_mode_array"
            android:entryValues="@array/morse_switch_mode_values"
            android:key="morse_switch_mode"
            android:persistent="true"
            android:title="@string/morse_switch_mode" 
            android:summary="@string/morse_switch_mode_summary"/>

        <Preference
            android:key="morse_repeat_int"
            android:persistent="true"
            android:summary="@string/mrepeat_frequency_summary"
            android:title="@string/mrepeat_frequency" />
    </PreferenceCategory>
    -->

    <PreferenceCategory
        android:key="scanning_settings"
        android:title="@string/scanning_category" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="self_scanning"
            android:persistent="true"
            android:summary="@string/self_scanning_summary"
            android:title="@string/self_scanning" />

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="inverse_scanning"
            android:persistent="true"
            android:summary="@string/inverse_scanning_summary"
            android:title="@string/inverse_scanning" />

        <Preference
            android:key="scan_delay_int"
            android:persistent="true"
            android:summary="@string/scan_speed_summary"
            android:title="@string/scan_speed" />
    </PreferenceCategory>

    <PreferenceCategory
        android:key="prediction_settings"
        android:title="@string/prediction_category" >

        <CheckBoxPreference
            android:defaultValue="true"
            android:key="quick_fixes"
            android:persistent="true"
            android:summary="@string/quick_fixes_summary"
            android:title="@string/quick_fixes" />

        <!--
        <CheckBoxPreference
            android:defaultValue="@bool/show_suggestions"
            android:enabled="false"
            android:key="show_suggestions"
            android:persistent="true"
            android:summary="@string/show_suggestions_summary"
            android:title="@string/show_suggestions" />

        <CheckBoxPreference
            android:defaultValue="@bool/enable_autocorrect"
            android:dependency="show_suggestions"
            android:enabled="false"
            android:key="auto_complete"
            android:persistent="true"
            android:summary="@string/auto_complete_summary"
            android:title="@string/auto_complete" />
        -->
    </PreferenceCategory>
	<PreferenceCategory
	    android:title="Other Devices Settings"
	    android:key="other_device_settings"
	    >
	<PreferenceScreen
	    android:key="desktop_settings"
	    android:title="Desktop Settings"
	    
	    >
	<CheckBoxPreference
	    android:key="enable_desktop_connectivity"
	    android:title="Connect to Desktop"
	    android:defaultValue="true"
	    android:summary="Enable connection to the desktop over WiFi"
	    android:persistence="true"
	    />    
	<Preference 
	    android:key="set_password"
	    android:title="Set password"
	    android:summary="Set password for authentication.Should match the password on the desktop client."
	    android:persistence="true"
	    />    
	</PreferenceScreen>	    
	</PreferenceCategory>
</PreferenceScreen>